# myLibrary

./: AnimeTab.qml  CMakeLists.txt  anime.json  animecompletedmodel.cpp  animecompletedmodel.h  animehandler.cpp  animehandler.h  main.cpp  main.qml  networkmaster.cpp  networkmaster.h  qml.qrc  replyhandler.cpp  replyhandler.h
